--- a/package/translate/uk.po
+++ b/package/translate/uk.po
@@ -25,7 +25,7 @@ msgstr ""
 
 #: ../contents/ui/config/ConfigGeneral.qml:37
 msgid "Desktop Widget: Show background"
-msgstr ""
+msgstr "Настільний віджет: Показувати фон"
 
 #: ../contents/ui/config/ConfigGeneral.qml:42
 msgid "Show background around each day"
