--- a/package/translate/zh_CN.po
+++ b/package/translate/zh_CN.po
@@ -25,7 +25,7 @@ msgstr ""
 
 #: ../contents/ui/config/ConfigGeneral.qml:37
 msgid "Desktop Widget: Show background"
-msgstr ""
+msgstr "桌面小部件: 显示背景"
 
 #: ../contents/ui/config/ConfigGeneral.qml:42
 msgid "Show background around each day"
