--- a/package/translate/nl_NL.po
+++ b/package/translate/nl_NL.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: simpleweather\n"
 "Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applet-dailyforecast\n"
 "POT-Creation-Date: 2019-11-05 17:53-0500\n"
-"PO-Revision-Date: 2019-02-12 21:40+0100\n"
+"PO-Revision-Date: 2019-11-12 14:27+0100\n"
 "Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
 "Language-Team: Dutch <vistausss@outlook.com>\n"
 "Language: nl_NL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.4\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../contents/config/config.qml:6
@@ -52,7 +52,7 @@ msgstr "Lettertype:"
 
 #: ../contents/ui/config/ConfigGeneral.qml:89
 msgid "Date:"
-msgstr ""
+msgstr "Datum:"
 
 #: ../contents/ui/config/ConfigGeneral.qml:91
 #: ../contents/ui/config/ConfigGeneral.qml:97
@@ -85,3 +85,4 @@ msgstr "<b>Versie:</b> %1"
 msgctxt "Use default font"
 msgid "Default"
 msgstr "Standaard"
+
