--- a/package/translate/el.po
+++ b/package/translate/el.po
@@ -71,7 +71,7 @@ msgstr "<b>Έκδοση:</b> %1"
 #: ../contents/ui/lib/ConfigFontFamily.qml
 msgctxt "Use default font"
 msgid "Default"
-msgstr ""
+msgstr "Προεπιλογή"
 
 #: ../contents/ui/libweather/WeatherData.qml
 msgid "Wind:"
@@ -79,7 +79,4 @@ msgstr ""
 
 #: ../contents/ui/main.qml
 msgid "Refresh"
-msgstr ""
-
-#~ msgid "%1°"
-#~ msgstr "%1°"
+msgstr "Ανανέωση"
